<resources>
    <string name="app_name">RunConCola</string>

    <string name="button_into_login">Iniciar sesión</string>
    <string name="button_into_register">Registrarse</string>
    <string name="button_temporal">Change Activity</string>
    <string name="button_register">Registrarse:</string>
    <string name="enter_data">Ingresa tus datos:</string>
    <string name="name">Nombre Completo:</string>
    <string name="new_name">Nuevo Nombre</string>
    <string name="age">Edad:</string>
    <string name="new_age">Nueva Edad</string>
    <string name="height">Estatura:</string>
    <string name="new_height">Nuevo Estatura (cm)</string>
    <string name="weight">Peso:</string>
    <string name="new_weight">Nuevo Peso (kg)</string>
    <string name="email">Correo electrónico:</string>
    <string name="new_email">Nuevo Correo</string>
    <string name="password">Contraseña:</string>
    <string name="new_password">Nueva Contraseña</string>
    <string name="gender">Género:</string>
    <string name="masculine_option">Masculino</string>
    <string name="female_option">Femenino</string>
    <string name="other_option">Otro</string>
    <string name="login_view">Bienvenido a GYMToma2</string>
    <string name="email_login">Correo electrónico</string>
    <string name="password_login">Contraseña</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="note_title">Gym Notes</string>
    <string name="add_note">Añadir Nueva Nota</string>

    <string name="title_nutritional_table">Tabla Nutricional</string>
    <string name="button_calculate">Calcular</string>

    <string name="title_notes">Añade una nueva Nota</string>
    <string name="date_notes">Fecha:</string>
    <string name="description_notes">Descripción:</string>
    <string name="save_note">Guardar Nueva Nota:</string>

    <string name="title_item_note">Título</string>
    <string name="description_item_note">Descripción de Note</string>
    <string name="date_item_note">Fecha actual</string>

    <string name="option_select">Pierna</string>

    <string name="exercise_arms">Brazos</string>
    <string name="triceps_extension">Extensiones de tríceps en polea</string>
    <string name="sets">3 series</string>
    <string name="repetitions">12 repeticiones</string>
    <string name="start_time_button">Comenzar</string>
    <string name="description_button">¿Como hacerlo?</string>
    <string name="next">Siguiente</string>
    <string name="biceps_curl">Curl de bíceps con barra Z</string>
    <string name="triceps_dips">Fondos de tríceps</string>
    <string name="biceps_curl2">Curl de bíceps con mancuernas</string>
    <string name="shoulder_press">Press de hombros</string>
    <string name="exercise_back">Espalda</string>


    <string name="aliment">Alimento</string>
    <string name="chiken">200gr Pollo con 100gr Arroz \n 519 cal \n 62 prot \n 15 gra</string>
    <string name="fish">100gr Pescado con 100gr Garbanzo \n 274 cal \n 32 prot \n 3 gra</string>
    <string name="cow">200gr de Res con ½ palta y 2u camotes \n 657 cal \n 76 prot \n 12 gra</string>
    <string name="avena">100gr Avena con 1u YogGrieg \n 523 cal \n 27 prot \n 9 gra</string>
    <string name="salmon">100gr Salmon con 100gr Tofu \n 194 cal \n 28 prot \n 8 gra</string>
    <string name="shrimp">7u Camarones con 2u Huevos y 100gr papas \n 285 cal \n 15 prot \n 5 gra</string>
    <string name="pork">100gr Cerdo con 100gr Brocoli y 50gr Yuca \n 256 cal \n 24 prot \n 9 gra</string>
    <string name="pasta">200gr Pollo con 100gr Pasta y 100gr Pepino \n 367 cal \n 35 prot \n 8 gra</string>



    <string name="dead_weight">Peso muerto</string>
    <string name="barbell_row">Remo con barra</string>
    <string name="dumbbell_row">Remo con mancuerna</string>
    <string name="chest_pull">Jalón al pecho</string>
    <string name="shrug">Encogimiento de hombros</string>
    <string name="dumbbell_pullover">Pullover con mancuerna</string>

    <string name="exercise_chest">Pecho</string>
    <string name="press_bench">Press de Banca</string>
    <string name="incline_press">Press inclinado</string>
    <string name="dumbbell_fly">Apertura con mancuernas</string>
    <string name="funds_parallel">Fondos en paralelas</string>
    <string name="crossing_pulleys">Cruce con poleas</string>
    <string name="declined_barbell_press">Press declinado con barra</string>

    <string name="exercise_legs">Piernas</string>
    <string name="barbell_squats">Sentadillas con barra</string>
    <string name="press_quadriceps">Prensa para cuádriceps</string>
    <string name="seated_femoral_curl">Curl de femoral sentado</string>
    <string name="dumbbell_lunges">Zancadas con mancuernas</string>
    <string name="calf_raises">Elevaciones de gemelos</string>
    <string name="aerial_squats">Sentadillas aéreas</string>

    <string name="back">Atras</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="prefs_file" translatable="false">com.grupoe.runconcola.activity.PREFERENCE_FILE_KEY</string>


</resources>