<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/background_one"
    tools:context=".activity.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_enter_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/X30X"
                android:textSize="@dimen/S22S"
                android:text="@string/enter_data"/>

            <View
                android:id="@+id/view_line_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/X3X"
                app:layout_constraintTop_toBottomOf="@id/text_enter_data"
                android:background="@color/white"
                android:layout_marginTop="@dimen/X3X"
                android:layout_marginStart="@dimen/X95X"
                android:layout_marginEnd="@dimen/X95X" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="@dimen/X300X"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="@id/view_line_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:background="@color/button_one"
                android:layout_marginTop="@dimen/X30X"
                android:textSize="@dimen/S22S"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/edit_text_number"
                android:layout_width="@dimen/X300X"
                android:layout_height="@dimen/X50X"
                android:gravity="center_horizontal"
                android:hint="@string/new_name"
                android:maxLength="45"
                android:textSize="@dimen/S19S"
                app:layout_constraintTop_toBottomOf="@+id/text_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/X25X"
                android:background="@color/button_two"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/text_age"
                android:layout_width="@dimen/X300X"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/edit_text_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:background="@color/button_one"
                android:layout_marginTop="@dimen/X35X"
                android:textSize="@dimen/S22S"
                android:text="@string/age"/>

            <EditText
                android:id="@+id/edit_text_age"
                android:layout_width="@dimen/X300X"
                android:layout_height="@dimen/X50X"
                android:gravity="center_horizontal"
                android:hint="@string/new_age"
                android:maxLength="45"
                android:textSize="@dimen/S19S"
                app:layout_constraintTop_toBottomOf="@+id/text_age"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/X25X"
                android:background="@color/button_two"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/text_height"
                android:layout_width="@dimen/X300X"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/edit_text_age"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:background="@color/button_one"
                android:layout_marginTop="@dimen/X35X"
                android:textSize="@dimen/S22S"
                android:text="@string/height"/>

            <EditText
                android:id="@+id/edit_text_height"
                android:layout_width="@dimen/X300X"
                android:layout_height="@dimen/X50X"
                android:gravity="center_horizontal"
                android:hint="@string/new_height"
                android:maxLength="45"
                android:textSize="@dimen/S19S"
                app:layout_constraintTop_toBottomOf="@+id/text_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/X25X"
                android:background="@color/button_two"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/text_weight"
                android:layout_width="@dimen/X300X"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/edit_text_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:background="@color/button_one"
                android:layout_marginTop="@dimen/X35X"
                android:textSize="@dimen/S22S"
                android:text="@string/weight"/>

            <EditText
                android:id="@+id/edit_text_weight"
                android:layout_width="@dimen/X300X"
                android:layout_height="@dimen/X50X"
                android:gravity="center_horizontal"
                android:hint="@string/new_weight"
                android:maxLength="45"
                android:textSize="@dimen/S19S"
                app:layout_constraintTop_toBottomOf="@+id/text_weight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/X25X"
                android:background="@color/button_two"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/text_email"
                android:layout_width="@dimen/X300X"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/edit_text_weight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:background="@color/button_one"
                android:layout_marginTop="@dimen/X35X"
                android:textSize="@dimen/S22S"
                android:text="@string/email"/>

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="@dimen/X300X"
                android:layout_height="@dimen/X50X"
                android:gravity="center_horizontal"
                android:hint="@string/new_email"
                android:maxLength="45"
                android:textSize="@dimen/S19S"
                app:layout_constraintTop_toBottomOf="@+id/text_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/X25X"
                android:background="@color/button_two"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/text_password"
                android:layout_width="@dimen/X300X"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/edit_text_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:background="@color/button_one"
                android:layout_marginTop="@dimen/X35X"
                android:textSize="@dimen/S22S"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="@dimen/X300X"
                android:layout_height="@dimen/X50X"
                android:gravity="center_horizontal"
                android:hint="@string/new_password"
                android:maxLength="45"
                android:textSize="@dimen/S19S"
                app:layout_constraintTop_toBottomOf="@+id/text_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/X25X"
                android:background="@color/button_two"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/text_gender"
                android:layout_width="@dimen/X300X"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/edit_text_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:background="@color/button_one"
                android:layout_marginTop="@dimen/X35X"
                android:textSize="@dimen/S22S"
                android:text="@string/gender"/>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="@dimen/X300X"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/X1X"
                android:background="@color/button_two"
                app:layout_constraintTop_toBottomOf="@+id/text_gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <RadioButton
                    android:id="@+id/radio_button_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/S19S"
                    android:text="@string/masculine_option"
                    android:checked="true"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/radio_button_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/S19S"
                    android:text="@string/female_option"/>

                <RadioButton
                    android:id="@+id/radio_button_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/S19S"
                    android:text="@string/other_option"/>

            </RadioGroup>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_register"
                android:layout_width="@dimen/X110X"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/radio_group"
                app:layout_constraintRight_toLeftOf="@id/logo_register"
                android:layout_marginTop="@dimen/X40X"
                android:layout_marginEnd="@dimen/X5X"
                android:layout_marginBottom="@dimen/X10X"
                android:text="@string/button_register"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:backgroundTint="@color/button_three"
                android:background="@drawable/button_style"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/logo_register"
                android:layout_width="@dimen/X50X"
                android:layout_height="@dimen/X50X"
                android:src="@drawable/exit"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toBottomOf="@+id/radio_group"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/X40X"
                android:layout_marginEnd="@dimen/X10X"
                android:layout_marginBottom="@dimen/X10X" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>